--- a/pages/2499.html
+++ b/pages/2499.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -2226,6 +2226,10 @@ margin-left: 0em;
 
 <h4 id="details">Details</h4>
 
+<blockquote>
+<p>under construction</p>
+</blockquote>
+
 <p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo>=</mo></mrow><annotation encoding="application/x-tex">\mathbf{H} =</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/SuperFormalSmooth%E2%88%9EGroupoids">SuperFormalSmooth∞Groupoids</a>.</p>
 
 <div class="num_defn" id="SuperLInfinityAlgebraValuedDifferentialForms">
@@ -2397,10 +2401,79 @@ margin-left: 0em;
 <div class="num_prop">
 <h6 id="proposition_3">Proposition</h6>
 
-<p>A sufficient condition for the subset <a class="maruku-eqref" href="#eq:GlobalCartanConnectionForms">(7)</a> to be rhenonmic (Def. <a class="maruku-ref" href="#RheonomicSetOfDifferentialForms"></a>) is that the components of the <a class="existingWikiWord" href="/nlab/show/curvature">curvature</a>-forms with any odd-graded indices are linear combinations of the components of the curvature forms without odd-graded indices.</p>
+<p>A sufficient condition for the subset <a class="maruku-eqref" href="#eq:GlobalCartanConnectionForms">(7)</a> to be rheonomic(Def. <a class="maruku-ref" href="#RheonomicSetOfDifferentialForms"></a>) is that the components of the <a class="existingWikiWord" href="/nlab/show/curvature">curvature</a>-forms with any odd-graded indices are linear combinations of the components of the curvature forms without odd-graded indices.</p>
 </div>
 
 <p>(<a href="#CastellaniDAuriaFre">Castellani-D’Auria-Fré 91, vol 2, (III.3.30)</a>)</p>
+
+<div class="proof">
+<h6 id="proof">Proof</h6>
+
+<p>Let</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>Ω</mi> <mo>•</mo></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mover><mo>⟵</mo><mi>μ</mi></mover><mi>W</mi><mo stretchy="false">(</mo><mi>𝔤</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  \Omega^\bullet(X) 
+  \overset{\mu}{\longleftarrow}
+  W(\mathfrak{g})
+
+</annotation></semantics></math></div>
+<p>be a given form. Choosing any basis <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><msub><mi>P</mi> <mi>a</mi></msub><mo>,</mo><msub><mi>Q</mi> <mi>α</mi></msub><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">\{P_a, Q_\alpha\}</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔤</mi></mrow><annotation encoding="application/x-tex">\mathfrak{g}</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> has components</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><mi>μ</mi></mtd> <mtd><mo>=</mo><mi>μ</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo><mi>d</mi><msup><mi>x</mi> <mi>a</mi></msup><mo>+</mo><msub><mi>μ</mi> <mi>α</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo><mi>d</mi><msup><mi>θ</mi> <mi>α</mi></msup></mtd></mtr></mtable></mrow><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  \begin{aligned}
+    \mu 
+    &amp; 
+    = \mu\big( (x^a), (\theta^\alpha) \big)  
+    \\
+    &amp; = 
+    \mu_a\big( (x^a), (\theta^\alpha) \big) d x^a
+    +
+    \mu_\alpha\big( (x^a), (\theta^\alpha) \big) d \theta^\alpha
+  \end{aligned}
+  \,.
+
+</annotation></semantics></math></div>
+<p>We have to show, under the assumption that there existlinear maps</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.8em" minsize="1.8em">(</mo><msubsup><mi>ϕ</mi> <mrow><mi>α</mi><mi>a</mi></mrow> <mrow><mi>b</mi><mi>c</mi></mrow></msubsup><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>𝔤</mi><mo>→</mo><mi>𝔤</mi><msub><mo maxsize="1.8em" minsize="1.8em">)</mo> <mrow><mi>a</mi><mo>,</mo><mi>b</mi><mo>,</mo><mi>c</mi><mo>,</mo><mi>α</mi></mrow></msub></mrow><annotation encoding="application/x-tex">
+  \Big(
+    \phi_{\alpha a}^{b c}
+    \;\colon\;
+    \mathfrak{g}
+    \to \mathfrak{g}
+  \Big)_{a,b,c, \alpha}
+
+</annotation></semantics></math></div>
+<p>with</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>F</mi> <mi>μ</mi></msub><msub><mo maxsize="1.2em" minsize="1.2em">)</mo> <mrow><mi>α</mi><mi>a</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><msubsup><mi>ϕ</mi> <mrow><mi>α</mi><mi>a</mi></mrow> <mrow><mi>b</mi><mi>c</mi></mrow></msubsup><mrow><mo>(</mo><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>F</mi> <mi>μ</mi></msub><msub><mo maxsize="1.2em" minsize="1.2em">)</mo> <mrow><mi>b</mi><mi>c</mi></mrow></msub><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">
+  \big( F_{\mu}\big)_{\alpha a}
+  \;=\;
+  \phi_{\alpha a}^{b c} \left( \big(F_\mu\big)_{b c} \right)
+
+</annotation></semantics></math></div>
+<p>that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> is uniquely determined already by the component <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo>=</mo><mn>0</mn><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_a\big( (x^a), (\theta^\alpha = 0)  \big)</annotation></semantics></math>. For this it is sufficent to show that all component functions</p>
+
+<ol>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_a\big( (x^a), (\theta^\alpha)  \big)</annotation></semantics></math></p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>α</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_\alpha\big( (x^a), (\theta^\alpha)  \big)</annotation></semantics></math></p>
+</li>
+</ol>
+
+<p>may be expressed as functions of the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo>=</mo><mn>0</mn><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_a\big( (x^a), (\theta^\alpha = 0) \big)</annotation></semantics></math>.</p>
+
+<p><strong>1)</strong></p>
+
+<p>By the nilpotency of the odd-graded coordinates <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>θ</mi> <mi>α</mi></msup></mrow><annotation encoding="application/x-tex">\theta^\alpha</annotation></semantics></math>, we have that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/multilinear+map">multilinear map</a> in the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>θ</mi> <mi>α</mi></msup></mrow><annotation encoding="application/x-tex">\theta^\alpha</annotation></semantics></math>.</p>
+
+<p>Hence, by <a class="existingWikiWord" href="/nlab/show/induction">induction</a>, assume that the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>-linear part <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><msub><mo stretchy="false">)</mo> <mrow><mi>k</mi><mi>lin</mi></mrow></msub><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_a\big( (x^a), (\theta^\alpha)_{k lin}  \big)</annotation></semantics></math> in the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>θ</mi> <mi>α</mi></msup></mrow><annotation encoding="application/x-tex">\theta^\alpha</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_a\big( (x^a), (\theta^\alpha)  \big)</annotation></semantics></math> is fixed by. It is then sufficient to show that also the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>k</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(k+1)</annotation></semantics></math>-linear term <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><msub><mo stretchy="false">)</mo> <mrow><mo stretchy="false">(</mo><mi>k</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo><mi>lin</mi></mrow></msub><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_a\big( (x^a), (\theta^\alpha)_{(k+1) lin}  \big)</annotation></semantics></math> is fixed.</p>
+
+<p>This is evidently equivalent to the statement that all the <a class="existingWikiWord" href="/nlab/show/derivatives">derivatives</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><msub><mo stretchy="false">)</mo> <mrow><mo stretchy="false">(</mo><mi>k</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo><mi>lin</mi></mrow></msub><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_a\big( (x^a), (\theta^\alpha)_{(k+1) lin}  \big)</annotation></semantics></math> by any <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>θ</mi> <mrow><msub><mi>α</mi> <mrow><mi>k</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow></msup></mrow><annotation encoding="application/x-tex">\theta^{\alpha_{k+1}}</annotation></semantics></math> evaluated at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>θ</mi> <mrow><msub><mi>α</mi> <mrow><mi>k</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\theta^{\alpha_{k+1}} = 0</annotation></semantics></math> are fixed.</p>
+
+<p>The key point is that by the assumption that we have a Cartan connection, these derivatives are proportional to a sum of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>F</mi> <mi>ω</mi></msub><msub><mo maxsize="1.2em" minsize="1.2em">)</mo> <mrow><msub><mi>α</mi> <mrow><mi>k</mi><mo>+</mo><mn>1</mn></mrow></msub><mi>a</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\big( F_\omega\big)_{\alpha_{k+1} a}</annotation></semantics></math></p>
+
+<p>(…)</p>
+</div>
 
 <p>(…)</p>
 
@@ -2490,7 +2563,7 @@ margin-left: 0em;
 <p>In <a href="#DAuriaFre">DAuriaFre p. 9</a> this system of equations is called the <strong>cosmo-cocycle condition</strong> .</p>
 
 <div class="proof">
-<h6 id="proof">Proof</h6>
+<h6 id="proof_2">Proof</h6>
 
 <p>This follows straightforwardly from the definition of the <a class="existingWikiWord" href="/nlab/show/Weil+algebra">Weil algebra</a>-<a class="existingWikiWord" href="/nlab/show/differential">differential</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>d</mi> <mrow><mi>W</mi><mo stretchy="false">(</mo><mi>𝔤</mi><mo stretchy="false">)</mo></mrow></msub></mrow><annotation encoding="application/x-tex">d_{W(\mathfrak{g})}</annotation></semantics></math>:</p>
 
@@ -2832,14 +2905,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 16, 2018 at 02:36:53.
+  Last revised on December 16, 2018 at 03:41:02.
   See the <a href="https://ncatlab.org/nlab/history/D&#39;Auria-Fre formulation of supergravity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D%27Auria-Fre+formulation+of+supergravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D%27Auria-Fre+formulation+of+supergravity/74" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(74 revisions)</span> | <a href="/nlab/show/diff/D%27Auria-Fre+formulation+of+supergravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D%27Auria-Fre+formulation+of+supergravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D%27Auria-Fre+formulation+of+supergravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D%27Auria-Fre+formulation+of+supergravity/75" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(75 revisions)</span> | <a href="/nlab/show/diff/D%27Auria-Fre+formulation+of+supergravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D%27Auria-Fre+formulation+of+supergravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D&#39;Auria-Fre formulation of supergravity/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
