--- a/pages/251.html
+++ b/pages/251.html
@@ -780,11 +780,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Marco Grandis and Robert Paré, <a href="http://www.numdam.org/numdam-bin/feuilleter?id=CTGDC_1999__40_3">Limits in double categories</a>, <em>Cahiers de Topologie et Géométrie Différentielle Catégoriques</em> <strong>40</strong> (1999), 162–220.</p>
+<p>Marco Grandis and Robert Paré, <a href="http://www.numdam.org/article/CTGDC_1999__40_3_162_0.pdf">Limits in double categories</a>, <em>Cahiers de Topologie et Géométrie Différentielle Catégoriques</em> <strong>40</strong> (1999), 162–220.</p>
 </li>
 
 <li>
-<p>Marco Grandis and Robert Paré, <a href="http://www.numdam.org/numdam-bin/feuilleter?id=CTGDC_2004__45_3">Adjoints for double categories</a>, <em>Cahiers de Topologie et Géométrie Différentielle Catégoriques</em> <strong>45</strong> (2004), 193–240.</p>
+<p>Marco Grandis and Robert Paré, <a href="http://www.numdam.org/article/CTGDC_2004__45_3_193_0.pdf">Adjoints for double categories</a>, <em>Cahiers de Topologie et Géométrie Différentielle Catégoriques</em> <strong>45</strong> (2004), 193–240.</p>
 </li>
 
 <li>
@@ -811,7 +811,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 16, 2018 at 05:57:27.
+  Last revised on December 16, 2018 at 06:05:07.
   See the <a href="https://ncatlab.org/nlab/history/double category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
