--- a/pages/2499.html
+++ b/pages/2499.html
@@ -2442,10 +2442,11 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>with</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>F</mi> <mi>μ</mi></msub><msub><mo maxsize="1.2em" minsize="1.2em">)</mo> <mrow><mi>α</mi><mi>a</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><msubsup><mi>ϕ</mi> <mrow><mi>α</mi><mi>a</mi></mrow> <mrow><mi>b</mi><mi>c</mi></mrow></msubsup><mrow><mo>(</mo><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>F</mi> <mi>μ</mi></msub><msub><mo maxsize="1.2em" minsize="1.2em">)</mo> <mrow><mi>b</mi><mi>c</mi></mrow></msub><mo>)</mo></mrow></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>F</mi> <mi>μ</mi></msub><msub><mo maxsize="1.2em" minsize="1.2em">)</mo> <mrow><mi>α</mi><mi>a</mi></mrow></msub><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><msubsup><mi>ϕ</mi> <mrow><mi>α</mi><mi>a</mi></mrow> <mrow><mi>b</mi><mi>c</mi></mrow></msubsup><mrow><mo>(</mo><mo maxsize="1.2em" minsize="1.2em">(</mo><msub><mi>F</mi> <mi>μ</mi></msub><msub><mo maxsize="1.2em" minsize="1.2em">)</mo> <mrow><mi>b</mi><mi>c</mi></mrow></msub><mo>)</mo></mrow><mspace width="thinmathspace"></mspace><mo>,</mo></mrow><annotation encoding="application/x-tex">
   \big( F_{\mu}\big)_{\alpha a}
   \;=\;
   \phi_{\alpha a}^{b c} \left( \big(F_\mu\big)_{b c} \right)
+  \,,
 
 </annotation></semantics></math></div>
 <p>that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> is uniquely determined already by the component <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>μ</mi> <mi>a</mi></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mo stretchy="false">(</mo><msup><mi>x</mi> <mi>a</mi></msup><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msup><mi>θ</mi> <mi>α</mi></msup><mo>=</mo><mn>0</mn><mo stretchy="false">)</mo><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mu_a\big( (x^a), (\theta^\alpha = 0)  \big)</annotation></semantics></math>. For this it is sufficent to show that all component functions</p>
@@ -2935,14 +2936,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 16, 2018 at 05:16:47.
+  Last revised on December 16, 2018 at 08:03:02.
   See the <a href="https://ncatlab.org/nlab/history/D&#39;Auria-Fre formulation of supergravity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D%27Auria-Fre+formulation+of+supergravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D%27Auria-Fre+formulation+of+supergravity/77" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(77 revisions)</span> | <a href="/nlab/show/diff/D%27Auria-Fre+formulation+of+supergravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D%27Auria-Fre+formulation+of+supergravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D%27Auria-Fre+formulation+of+supergravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D%27Auria-Fre+formulation+of+supergravity/78" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(78 revisions)</span> | <a href="/nlab/show/diff/D%27Auria-Fre+formulation+of+supergravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D%27Auria-Fre+formulation+of+supergravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D&#39;Auria-Fre formulation of supergravity/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
