--- a/pages/8386.html
+++ b/pages/8386.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4187/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4187/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,10 @@ margin-left: 0em;
 
 <h4 id="type_theory">Type theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/natural+deduction">natural deduction</a></strong> <a class="existingWikiWord" href="/nlab/show/metalanguage">metalanguage</a>, <a class="existingWikiWord" href="/nlab/show/practical+foundations">practical foundations</a></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/natural+deduction">natural deduction</a></strong> <a class="existingWikiWord" href="/nlab/show/metalanguage">metalanguage</a>, <a class="existingWikiWord" href="/nlab/show/practical+foundations">practical foundations</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/judgement">judgement</a></p>
 </li>
@@ -329,7 +332,9 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/antecedents">antecedents</a><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_326683e7e945796d64895ffa5c2711037bd82af8_1"><semantics><mrow><mo>⊢</mo></mrow><annotation encoding="application/x-tex">\vdash</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/consequent">consequent</a>, <a class="existingWikiWord" href="/nlab/show/succedents">succedents</a></li>
 </ul>
 </li>
-</ul><ol>
+</ul>
+
+<ol>
 <li><a class="existingWikiWord" href="/nlab/show/type+formation+rule">type formation rule</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/term+introduction+rule">term introduction rule</a></li>
@@ -337,9 +342,17 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/term+elimination+rule">term elimination rule</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/computation+rule">computation rule</a></li>
-</ol><p><strong><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/dependent+type+theory">dependent</a>, <a class="existingWikiWord" href="/nlab/show/intensional+type+theory">intensional</a>, <a class="existingWikiWord" href="/nlab/show/observational+type+theory">observational type theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a>)</p><ul>
+</ol>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/dependent+type+theory">dependent</a>, <a class="existingWikiWord" href="/nlab/show/intensional+type+theory">intensional</a>, <a class="existingWikiWord" href="/nlab/show/observational+type+theory">observational type theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a>)</p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/calculus+of+constructions">calculus of constructions</a></li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/syntax">syntax</a></strong> <a class="existingWikiWord" href="/nlab/show/object+language">object language</a></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/syntax">syntax</a></strong> <a class="existingWikiWord" href="/nlab/show/object+language">object language</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/theory">theory</a>, <a class="existingWikiWord" href="/nlab/show/axiom">axiom</a></p>
 </li>
@@ -355,7 +368,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/theorem">theorem</a></p>
 </li>
-</ul><p><strong></strong> = <strong></strong> +<strong></strong> +<strong></strong></p><table><thead><tr><th></th><th></th><th></th></tr></thead><tbody><tr><td style="text-align: left;"></td><td style="text-align: left;">/</td><td style="text-align: left;">-/</td></tr>
+</ul>
+
+<p><strong></strong> = <strong></strong> +<strong></strong> +<strong></strong></p>
+
+<table><thead><tr><th></th><th></th><th></th></tr></thead><tbody><tr><td style="text-align: left;"></td><td style="text-align: left;">/</td><td style="text-align: left;">-/</td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;">, </td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
@@ -380,7 +397,11 @@ margin-left: 0em;
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;">(absence of) </td><td style="text-align: left;">(absence of) </td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-</tbody></table><p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+levels">homotopy levels</a></strong></p><ul>
+</tbody></table>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+levels">homotopy levels</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></p>
 </li>
@@ -414,7 +435,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/semantics">semantics</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/semantics">semantics</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/internal+logic">internal logic</a>, <a class="existingWikiWord" href="/nlab/show/categorical+semantics">categorical semantics</a></p>
 
@@ -444,13 +469,18 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/type-theoretic+model+category">type-theoretic model category</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/type+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
+
+<blockquote>
+<p>This page is about the concept of polymorphism in computer science. For the generalisation of morphisms introduced by <a class="existingWikiWord" href="/nlab/show/Shinichi+Mochizuki">Shinichi Mochizuki</a>, see <a class="existingWikiWord" href="/nlab/show/poly-morphism">poly-morphism</a>.</p>
+</blockquote>
 
 <h1 id="polymorphism">Polymorphism</h1>
 <div class='maruku_toc'>
@@ -539,14 +569,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 25, 2018 at 09:22:19.
+  Last revised on December 16, 2018 at 22:04:03.
   See the <a href="https://ncatlab.org/nlab/history/polymorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/polymorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/polymorphism/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/polymorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/polymorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/polymorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/polymorphism/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/polymorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/polymorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/polymorphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
