--- a/pages/9087.html
+++ b/pages/9087.html
@@ -322,7 +322,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>Serre’s intersection formula is a refinement of the <a class="existingWikiWord" href="/nlab/show/intersection+theory">intersection theory</a> statement of <a class="existingWikiWord" href="/nlab/show/B%C3%A9zout%27s+theorem">Bézout's theorem</a>. By replacing the plain <a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a> of <a class="existingWikiWord" href="/nlab/show/structure+sheaves">structure sheaves</a> of intersecting subvarieties with the <a class="existingWikiWord" href="/nlab/show/derived+functor">derived</a> tensor product – the <a class="existingWikiWord" href="/nlab/show/Tor">Tor</a> – it holds also when the subvarieties do no intersect transversally.</p>
+<p>Serre’s intersection formula is a refinement of the <a class="existingWikiWord" href="/nlab/show/intersection+theory">intersection theory</a> statement of <a class="existingWikiWord" href="/nlab/show/B%C3%A9zout%27s+theorem">Bézout's theorem</a>. By replacing the plain <a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a> of <a class="existingWikiWord" href="/nlab/show/structure+sheaves">structure sheaves</a> of intersecting subvarieties with the <a class="existingWikiWord" href="/nlab/show/derived+functor">derived</a> tensor product – the <a class="existingWikiWord" href="/nlab/show/Tor">Tor</a> – it holds also when the subvarieties do not intersect transversally.</p>
 
 <p>This may be understood as a first step towards formulating <a class="existingWikiWord" href="/nlab/show/intersection+theory">intersection theory</a> properly in <a class="existingWikiWord" href="/nlab/show/derived+algebraic+geometry">derived algebraic geometry</a>.</p>
 
@@ -347,14 +347,14 @@ m(x,Y,Z) = \sum_{i\geq 0} (-1)^i length_{\mathcal{O}_{X,x}} Tor_i^{\mathcal{O}_{
 
 <div class="revisedby">
   <p>
-  Last revised on December 18, 2018 at 10:57:54.
+  Last revised on December 18, 2018 at 16:48:30.
   See the <a href="https://ncatlab.org/nlab/history/Serre intersection formula" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Serre+intersection+formula" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Serre+intersection+formula/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Serre+intersection+formula" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Serre+intersection+formula" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Serre+intersection+formula" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Serre+intersection+formula/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Serre+intersection+formula" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Serre+intersection+formula" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Serre intersection formula/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
